# codespan

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
codespan/: Cargo.toml
codespan-lsp/: Cargo.toml
codespan-lsp/src/: lib.rs
codespan-reporting/: Cargo.toml  README.md
codespan-reporting/examples/: term.rs
codespan-reporting/src/: diagnostic.rs  emitter.rs  files.rs  lib.rs  term.rs
codespan-reporting/tests/: term.rs
codespan/src/: file.rs  index.rs  lib.rs  location.rs  span.rs
codespan/src/reporting/: mod.rs
codespan/src/reporting/term/: mod.rs
codespan/src/reporting/term/views/: diagnostic.rs  locus.rs
codespan/src/reporting/term/views/source_snippet/: border.rs  underline.rs
codespan/tests/: term.rs
codespan/tests/snapshots/: empty_spans__rich_color.snap  empty_spans__rich_no_color.snap  fizz_buzz__rich_color.snap  fizz_buzz__rich_no_color.snap  fizz_buzz__short_color.snap  fizz_buzz__short_no_color.snap  multifile__rich_color.snap  multifile__rich_no_color.snap  multifile__short_color.snap  multifile__short_no_color.snap  tabbed__tab_width_3_no_color.snap  tabbed__tab_width_6_no_color.snap  tabbed__tab_width_default_no_color.snap
codespan/tests/support/: mod.rs
examples/: term.rs
src/: file.rs
src/reporting/: mod.rs
tests/snapshots/: empty_spans__rich_color.snap  empty_spans__rich_no_color.snap  fizz_buzz__rich_color.snap  fizz_buzz__rich_no_color.snap  fizz_buzz__short_color.snap  multifile__rich_color.snap  multifile__rich_no_color.snap  multifile__short_color.snap  multifile__short_no_color.snap  (+3 more)
tools/: publish
(+43 files in other folders)
