[package]
name = "codespan"
version = "0.4.1" # CODESPAN
readme = "../README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Data structures for tracking locations in source code and diagnostic reporting"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan"
exclude = ["assets/**"]
edition = "2018"

[dependencies]
heapsize = { version = "0.4", optional = true }
heapsize_derive = { version = "0.1", optional = true }
serde = { version = "1", optional = true, features = ["derive"]}
termcolor = "1.0"
unicode-segmentation = "1.3"
unicode-width = "0.1"

[dev-dependencies]
insta = "0.11"
lazy_static = "1.3"
pretty_assertions = "0.6"
structopt = "0.2"
unindent = "0.1"

[features]
serialization = ["serde"]
memory_usage = ["heapsize_derive", "heapsize"]
